#30: Cleaned up spacing issues
- closes #30

--- a/src/less/custom.css
+++ b/src/less/custom.css
@@ -131,7 +131,7 @@ body {
 
 #intro {
   background: #354C5D;
-  padding-top: 100px;
+  padding-top: 30px;
   padding-bottom: 60px;
   color: white;
 }
